exports[`getEmitterPorts return a map with port id2 && id4 1`] = `
Object {
  "id2": Object {
    "data": Object {
      "flowType": undefined,
      "properties": Object {},
    },
    "getPortDirection": [Function],
    "getPortFlowType": [Function],
    "getPortType": [Function],
    "getPosition": [Function],
    "graphicalAttributes": Object {
      "properties": Object {
        "type": "EMITTER",
      },
    },
    "id": "id2",
    "nodeId": "nodeId1",
  },
  "id4": Object {
    "data": Object {
      "flowType": undefined,
      "properties": Object {},
    },
    "getPortDirection": [Function],
    "getPortFlowType": [Function],
    "getPortType": [Function],
    "getPosition": [Function],
    "graphicalAttributes": Object {
      "properties": Object {
        "type": "EMITTER",
      },
    },
    "id": "id4",
    "nodeId": "nodeId2",
  },
}
`;

exports[`getEmitterPortsForNode return a map with port id2 1`] = `
Object {
  "id2": Object {
    "data": Object {
      "flowType": undefined,
      "properties": Object {},
    },
    "getPortDirection": [Function],
    "getPortFlowType": [Function],
    "getPortType": [Function],
    "getPosition": [Function],
    "graphicalAttributes": Object {
      "properties": Object {
        "type": "EMITTER",
      },
    },
    "id": "id2",
    "nodeId": "nodeId1",
  },
}
`;

exports[`getSinkPorts return a map with port id1 & id3 1`] = `
Object {
  "id1": Object {
    "data": Object {
      "flowType": undefined,
      "properties": Object {},
    },
    "getPortDirection": [Function],
    "getPortFlowType": [Function],
    "getPortType": [Function],
    "getPosition": [Function],
    "graphicalAttributes": Object {
      "properties": Object {
        "type": "SINK",
      },
    },
    "id": "id1",
    "nodeId": "nodeId1",
  },
  "id3": Object {
    "data": Object {
      "flowType": undefined,
      "properties": Object {},
    },
    "getPortDirection": [Function],
    "getPortFlowType": [Function],
    "getPortType": [Function],
    "getPosition": [Function],
    "graphicalAttributes": Object {
      "properties": Object {
        "type": "SINK",
      },
    },
    "id": "id3",
    "nodeId": "nodeId2",
  },
}
`;
